--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/buttontypes.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/buttontypes.html
@@ -5,44 +5,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Required</title>
+    <title>Button Type</title>
 </head>
 
 <body>
-    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>required</strong> Attribute</h1>
+    <h1 style="text-align: center;">HTML &lt;button&gt; types</h1>
 
     <section>
-        <h2>required</h2>
-        <p>The <code style="color:red">required</code> <code style="color:red"></code> attribute
-            is a boolean attribute.When present, it specifies that an input field must be filled out before submitting
-            the form.
-            <br><br>
-            <strong>Note</strong>: The required attribute works with the following input types: <u>text, search, url,
-                tel,
-                email, password,
-                date pickers, number, checkbox, radio,</u> and <u>file.</u>
-            <br><br>
+        <h2>button Types</h2>
+        <p><code style="color:red">&lt;button type=""&gt;</code> attribute specifies the type of button.
+<br><br>
+            <strong>Tip</strong>: Always specify the type attribute for the &lt;button&gt; element. Different browsers
+            may use different
+                default types for the &lt;button&gt; elements.
         </p>
         <div style="background:#e4eff1">
             <p>Example:
                 <br><br>
-                An HTML form with a required input field:
+Two <strong>button</strong> elements that act as one submit button and one reset button (in a form):
             </p>
             <hr>
             <code>
                 <pre>
-                    &lt;form action="/action_page.php"&gt;
-                    &lt;label for="username"&gt;Username:&lt;/label&gt;
-                    &lt;input type="text" id="username" name="username" required&gt;
-                    &lt;input type="submit"&gt;
+                    &lt;form action="/action_page.php" method="get"&gt;
+                    &lt;label for="fname"&gt;First name:&lt;/label&gt;
+                    &lt;input type="text" id="fname" name="fname"&gt;&lt;br&gt;&lt;br&gt;
+                    &lt;label for="lname"&gt;Last name:&lt;/label&gt;
+                    &lt;input type="text" id="lname" name="lname"&gt;&lt;br&gt;&lt;br&gt;
+                    &lt;button type="submit" value="Submit"&gt;Submit&lt;/button&gt;
+                    &lt;button type="reset" value="Reset"&gt;Reset&lt;/button&gt;
                     &lt;/form&gt;
                 </pre>
             </code>
             <samp>
-                <form action="/action_page.php">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
-                    <input type="submit">
+                <form action="/action_page.php" method="get">
+                    <label for="fname">First name:</label>
+                    <input type="text" id="fname" name="fname"><br><br>
+                    <label for="lname">Last name:</label>
+                    <input type="text" id="lname" name="lname"><br><br>
+                    <button type="submit" value="Submit">Submit</button>
+                    <button type="reset" value="Reset">Reset</button>
                 </form>
             </samp>
             <br>
