--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/checkbox.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/checkbox.html
@@ -5,45 +5,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Required</title>
+    <title>Checkbox</title>
 </head>
 
 <body>
-    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>required</strong> Attribute</h1>
+    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>checkbox</strong> Attribute</h1>
 
     <section>
-        <h2>required</h2>
-        <p>The <code style="color:red">required</code> <code style="color:red"></code> attribute
-            is a boolean attribute.When present, it specifies that an input field must be filled out before submitting
-            the form.
-            <br><br>
-            <strong>Note</strong>: The required attribute works with the following input types: <u>text, search, url,
-                tel,
-                email, password,
-                date pickers, number, checkbox, radio,</u> and <u>file.</u>
-            <br><br>
+        <h2>checkbox </h2>
+        <p>The <code style="color:red">&lt;input type="checkbox"&gt;</code> defines a checkbox.It is shown as a square box that is ticked (checked) when activated.
+<br><br>
+            <strong>Checkboxes</strong> are used to let a user select one or more options of a limited number of
+            choices.
+<br><br>
+            <strong>Tip</strong>: Always add the &lt;label&gt; tag for best accessibility practices!
         </p>
         <div style="background:#e4eff1">
             <p>Example:
                 <br><br>
-                An HTML form with a required input field:
+Let the user select one or more options of a limited number of choices:
             </p>
             <hr>
             <code>
                 <pre>
-                    &lt;form action="/action_page.php"&gt;
-                    &lt;label for="username"&gt;Username:&lt;/label&gt;
-                    &lt;input type="text" id="username" name="username" required&gt;
-                    &lt;input type="submit"&gt;
-                    &lt;/form&gt;
+                    &lt;input type="checkbox" id="vehicle1" name="vehicle1" value="Bike"&gt;
+                    &lt;label for="vehicle1"&gt; I have a bike&lt;/label&gt;&lt;br&gt;
+                    &lt;input type="checkbox" id="vehicle2" name="vehicle2" value="Car"&gt;
+                    &lt;label for="vehicle2"&gt; I have a car&lt;/label&gt;&lt;br&gt;
+                    &lt;input type="checkbox" id="vehicle3" name="vehicle3" value="Boat"&gt;
+                    &lt;label for="vehicle3"&gt; I have a boat&lt;/label&gt;&lt;br&gt;
                 </pre>
             </code>
             <samp>
-                <form action="/action_page.php">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
-                    <input type="submit">
-                </form>
+                <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+                <label for="vehicle1"> I have a bike</label><br>
+                <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+                <label for="vehicle2"> I have a car</label><br>
+                <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+                <label for="vehicle3"> I have a boat</label><br>
             </samp>
             <br>
         </div>
