--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/hidden.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/hidden.html
@@ -5,45 +5,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Required</title>
+    <title>Hidden</title>
 </head>
 
 <body>
-    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>required</strong> Attribute</h1>
-
+    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>hidden</strong> Attribute</h1>
     <section>
-        <h2>required</h2>
-        <p>The <code style="color:red">required</code> <code style="color:red"></code> attribute
-            is a boolean attribute.When present, it specifies that an input field must be filled out before submitting
-            the form.
-            <br><br>
-            <strong>Note</strong>: The required attribute works with the following input types: <u>text, search, url,
-                tel,
-                email, password,
-                date pickers, number, checkbox, radio,</u> and <u>file.</u>
-            <br><br>
+        <h2>hidden </h2>
+        <p>The <code style="color:red">&lt;input type="hidden"&gt;</code> defines a <b>hidden</b> input field, and it let web developers include data that cannot be seen or modified by users when a form is submitted.
+<br><br>
+            A hidden field often stores what database record that needs to be updated when the form is submitted.
+<br><br>
+            Note: While the value is not displayed to the user in the page's content, it is visible (and can be edited)
+            using any browser's developer tools or "View Source" functionality. Do not use hidden inputs as a form of
+            security!
         </p>
         <div style="background:#e4eff1">
-            <p>Example:
+            <p><b>Example</b>:
                 <br><br>
-                An HTML form with a required input field:
+Define a hidden field:
             </p>
             <hr>
             <code>
                 <pre>
                     &lt;form action="/action_page.php"&gt;
-                    &lt;label for="username"&gt;Username:&lt;/label&gt;
-                    &lt;input type="text" id="username" name="username" required&gt;
-                    &lt;input type="submit"&gt;
+                    &lt;label for="fname"&gt;First name:&lt;/label&gt;
+                    &lt;input type="text" id="fname" name="fname"&gt;&lt;br&gt;&lt;br&gt;
+                    &lt;input type="hidden" id="custId" name="custId" value="3487"&gt;
+                    &lt;input type="submit" value="Submit"&gt;
                     &lt;/form&gt;
                 </pre>
             </code>
             <samp>
+                <h1>A Hidden Field (look in source code)</h1>
+
                 <form action="/action_page.php">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
-                    <input type="submit">
+                    <label for="fname">First name:</label>
+                    <input type="text" id="fname" name="fname"><br><br>
+                    <input type="hidden" id="custId" name="custId" value="3487">
+                    <input type="submit" value="Submit">
                 </form>
+
+                <p><strong>Note:</strong> The hidden field is not shown to the user, but the data is sent when the form
+                    is submitted.</p>
             </samp>
             <br>
         </div>
