--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/image.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/image.html
@@ -43,7 +43,7 @@ Define an image as a submit button:
                     <input type="text" id="fname" name="fname"><br><br>
                     <label for="lname">Last name: </label>
                     <input type="text" id="lname" name="lname"><br><br>
-                    <input type="image" src="img_submit.gif" alt="Submit" width="48" height="48">
+                    <input type="image" src="/html-cheat-sheet/img_submit.gif" alt="Submit" width="48" height="48">
                 </form>
 
                 <p><b>Note:</b> The input type="image" sends the X and Y coordinates of the click that activated the
