--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/image.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/image.html
@@ -44,7 +44,7 @@ Define an image as a submit button:
                     <label for="lname">Last name: </label>
                     <input type="text" id="lname" name="lname"><br><br>
                     <input type="image"
-                        src="https://github.com/MarcelDurgante/html-cheat-sheet2-/blob/fb9fb8d380deaa476376c6ce5f7ef5a8b9f7ff93/html-cheat-sheet/img_submit.gif"
+                        src="https://raw.githubusercontent.com/MarcelDurgante/html-cheat-sheet2-/fb9fb8d380deaa476376c6ce5f7ef5a8b9f7ff93/html-cheat-sheet/img_submit.gif"
                         alt="Submit" width="48" height="48">
                 </form>
 
