All form tags, attributes and types finished.

--- a/html-cheat-sheet/Pages/Forms/Form Pages/Form Elements/form-elements.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Form Elements/form-elements.html
@@ -40,16 +40,16 @@
                     <a href="fieldset.html" target="_blank">&lt;fieldset&gt;</a>
                 </li>
                 <li>
-                    <a href="input.html">&lt;input&gt;</a>
+                    <a href="input.html" target="_blank">&lt;input&gt;</a>
                 </li>
                 <li>
-                    <a href="output.html">&lt;output&gt;</a>
+                    <a href="output.html" target="_blank">&lt;output&gt;</a>
                 </li>
                 <li>
-                    <a href="select.html">&lt;select&gt;</a>
+                    <a href="select.html" target="_blank">&lt;select&gt;</a>
                 </li>
                 <li>
-                    <a href="textarea.html">&lt;textarea&gt;</a>
+                    <a href="textarea.html" target="_blank">&lt;textarea&gt;</a>
                 </li>
             </ul>
         </div>
