--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Attributes/input-attributes.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Attributes/input-attributes.html
@@ -26,54 +26,51 @@
         <div style="background:#e4eff1">
             <ul style="text-decoration:none">
                 <li>
-                    <a href="button.html" target="_blank">&lt;autofocus&gt;</a>
+                    <a href="autofocus.html" target="_blank">&lt;autofocus&gt;</a>
                 </li>
                 <li>
-                    <a href="datalist.html" target="_blank">&lt;disabled&gt;</a>
+                    <a href="disabled.html" target="_blank">&lt;disabled&gt;</a>
                 </li>
                 <li>
-                    <a href="fieldset.html" target="_blank">&lt;form&gt;</a>
+                    <a href="form.html" target="_blank">&lt;form&gt;</a>
                 </li>
                 <li>
-                    <a href="input.html">&lt;height&gt; and &lt;width&gt;</a>
+                    <a href="list.html" target="_blank">&lt;list&gt;</a>
                 </li>
                 <li>
-                    <a href="output.html">&lt;list&gt;</a>
+                    <a href="maxlength.html" target="_blank">&lt;maxlength&gt;</a>
                 </li>
                 <li>
-                    <a href="select.html">&lt;max-lenght&gt;</a>
+                    <a href="minandmax.html" target="_blank">&lt;minandmax&gt;</a>
                 </li>
                 <li>
-                    <a href="textarea.html">&lt;min&gt; and &lt;max&gt;</a>
+                    <a href="multiple.html" target="_blank">&lt;multiple&gt;</a>
                 </li>
                 <li>
-                    <a href="button.html" target="_blank">&lt;multiple&gt;</a>
+                    <a href="pattern.html" target="_blank">&lt;pattern&gt;</a>
                 </li>
                 <li>
-                    <a href="datalist.html" target="_blank">&lt;pattern&gt;</a>
+                    <a href="placeholder.html" target="_blank">&lt;placeholder&gt;</a>
                 </li>
                 <li>
-                    <a href="fieldset.html" target="_blank">&lt;placeholder&gt;</a>
+                    <a href="readonly.html" target="_blank">&lt;readonly&gt;</a>
                 </li>
                 <li>
-                    <a href="input.html">&lt;readonly&gt;</a>
+                    <a href="required.html" target="_blank">&lt;required&gt;</a>
                 </li>
                 <li>
-                    <a href="output.html">&lt;required&gt;</a>
+                    <a href="size.html" target="_blank">&lt;size&gt;</a>
                 </li>
                 <li>
-                    <a href="select.html">&lt;size&gt;</a>
+                    <a href="step.html" target="_blank">&lt;step&gt;</a>
                 </li>
                 <li>
-                    <a href="textarea.html">&lt;step&gt;</a>
+                    <a href="type.html" target="_blank">&lt;type&gt;</a>
                 </li>
                 <li>
-                    <a href="select.html">&lt;type&gt;</a>
+                    <a href="value.html" target="_blank">&lt;value&gt;</a>
                 </li>
-                <li>
-                    <a href="textarea.html">&lt;value&gt;</a>
-                </li>
-            </ul>
+                </ul>
         </div>
         <br>
         <br>
