--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/input-types.html
@@ -5,52 +5,102 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Required</title>
+    <title>Input Types</title>
 </head>
 
 <body>
-    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>required</strong> Attribute</h1>
+
+    <h1 style="text-align: center;">input types</h1>
 
     <section>
-        <h2>required</h2>
-        <p>The <code style="color:red">required</code> <code style="color:red"></code> attribute
-            is a boolean attribute.When present, it specifies that an input field must be filled out before submitting
-            the form.
-            <br><br>
-            <strong>Note</strong>: The required attribute works with the following input types: <u>text, search, url,
-                tel,
-                email, password,
-                date pickers, number, checkbox, radio,</u> and <u>file.</u>
-            <br><br>
-        </p>
-        <div style="background:#e4eff1">
-            <p>Example:
-                <br><br>
-                An HTML form with a required input field:
-            </p>
-            <hr>
-            <code>
-                <pre>
-                    &lt;form action="/action_page.php"&gt;
-                    &lt;label for="username"&gt;Username:&lt;/label&gt;
-                    &lt;input type="text" id="username" name="username" required&gt;
-                    &lt;input type="submit"&gt;
-                    &lt;/form&gt;
-                </pre>
-            </code>
-            <samp>
-                <form action="/action_page.php">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
-                    <input type="submit">
-                </form>
-            </samp>
+        <h2>input types</h2>
+        <p>
+            The <code style="color:red; font-size:16px">&lt;input&gt; types</code> element is a
+            container for different types of input
+            elements, such as:
+            text fields, checkboxes, radio buttons, submit buttons, etc. It represents a document section
+            containing interactive controls for submitting information.
             <br>
+            <br>
+            <u>All the different form elements are covered in
+                the list below:</u>
+        </p>
+        <br>
+        <br>
+        <div style="background:#e4eff1">Example:
+            <hr>
+            <ul style="text-decoration:none">
+                <li>
+                    <a href="buttontypes.html" target="_blank">&lt;buttontypes&gt;</a>
+                </li>
+                <li>
+                    <a href="checkbox.html" target="_blank">&lt;checkbox&gt;</a>
+                </li>
+                <li>
+                    <a href="color.html" target="_blank">&lt;color&gt;</a>
+                </li>
+                <li>
+                    <a href="date.html" target="_blank">&lt;date&gt;</a>
+                </li>
+                <li>
+                    <a href="email.html" target="_blank">&lt;email&gt;</a>
+                </li>
+                <li>
+                    <a href="file.html" target="_blank">&lt;file&gt;</a>
+                </li>
+                <li>
+                    <a href="hidden.html" target="_blank">&lt;hidden&gt;</a>
+                </li>
+                <li>
+                    <a href="image.html" target="_blank">&lt;image&gt;</a>
+                </li>
+                <li>
+                    <a href="month.html" target="_blank">&lt;month&gt;</a>
+                </li>
+                <li>
+                    <a href="number.html" target="_blank">&lt;number&gt;</a>
+                </li>
+                <li>
+                    <a href="password.html" target="_blank">&lt;password&gt;</a>
+                </li>
+                <li>
+                    <a href="radio.html" target="_blank">&lt;radio&gt;</a>
+                </li>
+                <li>
+                    <a href="range.html" target="_blank">&lt;range&gt;</a>
+                </li>
+                <li>
+                    <a href="reset.html" target="_blank">&lt;reset&gt;</a>
+                </li>
+                <li>
+                    <a href="search.html" target="_blank">&lt;search&gt;</a>
+                </li>
+                <li>
+                    <a href="submit.html" target="_blank">&lt;submit&gt;</a>
+                </li>
+                <li>
+                    <a href="tel.html" target="_blank">&lt;tel&gt;</a>
+                </li>
+                <li>
+                    <a href="text.html" target="_blank">&lt;text&gt;</a>
+                </li>
+                <li>
+                    <a href="time.html" target="_blank">&lt;time&gt;</a>
+                </li>
+                <li>
+                    <a href="url.html" target="_blank">&lt;url&gt;</a>
+                </li>
+                <li>
+                    <a href="week.html" target="_blank">&lt;week&gt;</a>
+                </li>
+                </ul>
         </div>
         <br>
         <br>
-        <a href="form-elements.html">Return</a>
+        <a href="/index.html">Return</a>
+
     </section>
+
 </body>
 
 </html>
