--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/month.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/month.html
@@ -5,45 +5,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Required</title>
+    <title>Month</title>
 </head>
 
 <body>
-    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>required</strong> Attribute</h1>
-
+    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>month</strong> Attribute</h1>
     <section>
-        <h2>required</h2>
-        <p>The <code style="color:red">required</code> <code style="color:red"></code> attribute
-            is a boolean attribute.When present, it specifies that an input field must be filled out before submitting
-            the form.
+        <h2>month </h2>
+        <p>The <code style="color:red">&lt;input type="month"&gt;</code> defines a month
+            and year control.
             <br><br>
-            <strong>Note</strong>: The required attribute works with the following input types: <u>text, search, url,
-                tel,
-                email, password,
-                date pickers, number, checkbox, radio,</u> and <u>file.</u>
+            The format is "YYYY-MM".
             <br><br>
+            <b>Tip</b>: Always add the &lt;label&gt; tag for best accessibility practices!
         </p>
         <div style="background:#e4eff1">
-            <p>Example:
+            <p><b>Example</b>:
                 <br><br>
-                An HTML form with a required input field:
+                Define an month as a submit button:
             </p>
             <hr>
             <code>
                 <pre>
                     &lt;form action="/action_page.php"&gt;
-                    &lt;label for="username"&gt;Username:&lt;/label&gt;
-                    &lt;input type="text" id="username" name="username" required&gt;
+                    &lt;label for="bdaymonth"&gt;Birthday (month and year):&lt;/label&gt;
+                    &lt;input type="month" id="bdaymonth" name="bdaymonth"&gt;
                     &lt;input type="submit"&gt;
                     &lt;/form&gt;
                 </pre>
             </code>
             <samp>
+                <h1>Display a Month Input Control</h1>
+
+                <p>If the browser supports it, a date picker pops up when entering the input field.</p>
+
                 <form action="/action_page.php">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
+                    <label for="bdaymonth">Birthday (month and year):</label>
+                    <input type="month" id="bdaymonth" name="bdaymonth">
                     <input type="submit">
                 </form>
+<br>
+                <p><strong>Note:</strong> type="month" is not supported in Firefox, Safari or Internet Explorer 11 and
+                    earlier versions.</p>
             </samp>
             <br>
         </div>
