--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/number.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/number.html
@@ -5,45 +5,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Required</title>
+    <title>Number</title>
 </head>
 
 <body>
-    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>required</strong> Attribute</h1>
-
+    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>number</strong> Attribute</h1>
     <section>
-        <h2>required</h2>
-        <p>The <code style="color:red">required</code> <code style="color:red"></code> attribute
-            is a boolean attribute.When present, it specifies that an input field must be filled out before submitting
-            the form.
+        <h2>number </h2>
+        <p>The <code style="color:red">&lt;input type="number"&gt;</code> defines The &lt;input type="number"&gt;
+            defines a field for entering a number.
+<br><br>
+            Use the following attributes to specify restrictions:
+
+            max - specifies the maximum value allowed
+            min - specifies the minimum value allowed
+            step - specifies the legal number intervals
+            value - Specifies the default value
             <br><br>
-            <strong>Note</strong>: The required attribute works with the following input types: <u>text, search, url,
-                tel,
-                email, password,
-                date pickers, number, checkbox, radio,</u> and <u>file.</u>
-            <br><br>
+            <b>Tip</b>: Always add the &lt;label&gt; tag for best accessibility practices!
         </p>
         <div style="background:#e4eff1">
-            <p>Example:
+            <p><b>Example</b>:
                 <br><br>
-                An HTML form with a required input field:
+Define a field for entering a number (You can also set restrictions on what numbers are accepted):
             </p>
             <hr>
             <code>
                 <pre>
                     &lt;form action="/action_page.php"&gt;
-                    &lt;label for="username"&gt;Username:&lt;/label&gt;
-                    &lt;input type="text" id="username" name="username" required&gt;
+                    &lt;label for="quantity"&gt;Quantity (between 1 and 5):&lt;/label&gt;
+                    &lt;input type="number" id="quantity" name="quantity" min="1" max="5"&gt;
                     &lt;input type="submit"&gt;
                     &lt;/form&gt;
                 </pre>
             </code>
             <samp>
+                <h1>Display a Number Field</h1>
+
                 <form action="/action_page.php">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
+                    <label for="quantity">Quantity (between 1 and 5):</label>
+                    <input type="number" id="quantity" name="quantity" min="1" max="5">
                     <input type="submit">
                 </form>
+                <br>
+                <p><strong>Note:</strong> type="number" is not supported in Firefox, Safari or Internet Explorer 11 and
+                    earlier versions.</p>
             </samp>
             <br>
         </div>
