--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/password.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/password.html
@@ -5,43 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Required</title>
+    <title>Password</title>
 </head>
 
 <body>
-    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>required</strong> Attribute</h1>
-
+    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>password</strong> Attribute</h1>
     <section>
-        <h2>required</h2>
-        <p>The <code style="color:red">required</code> <code style="color:red"></code> attribute
-            is a boolean attribute.When present, it specifies that an input field must be filled out before submitting
-            the form.
+        <h2>password </h2>
+        <p>The <code style="color:red">&lt;input type="password"&gt;</code> defines a
+            password field (characters are masked).
+<br><br>
+            <b>Note</b>: Any forms involving sensitive information like passwords should be served over HTTPS.
             <br><br>
-            <strong>Note</strong>: The required attribute works with the following input types: <u>text, search, url,
-                tel,
-                email, password,
-                date pickers, number, checkbox, radio,</u> and <u>file.</u>
-            <br><br>
+            <b>Tip</b>: Always add the &lt;label&gt; tag for best accessibility practices!
         </p>
         <div style="background:#e4eff1">
-            <p>Example:
+            <p><b>Example</b>:
                 <br><br>
-                An HTML form with a required input field:
+                Define a field for entering a password (You can also set restrictions on what numbers are accepted):
             </p>
             <hr>
             <code>
                 <pre>
                     &lt;form action="/action_page.php"&gt;
-                    &lt;label for="username"&gt;Username:&lt;/label&gt;
-                    &lt;input type="text" id="username" name="username" required&gt;
+                    &lt;label for="email"&gt;Email:&lt;/label&gt;
+                    &lt;input type="email" id="email" name="email"&gt;&lt;br&gt;&lt;br&gt;
+                    &lt;label for="pwd"&gt;Password:&lt;/label&gt;
+                    &lt;input type="password" id="pwd" name="pwd" minlength="8"&gt;&lt;br&gt;&lt;br&gt;
                     &lt;input type="submit"&gt;
                     &lt;/form&gt;
                 </pre>
             </code>
             <samp>
+                <h1>Display a Password Field</h1>
+
                 <form action="/action_page.php">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email"><br><br>
+                    <label for="pwd">Password:</label>
+                    <input type="password" id="pwd" name="pwd" minlength="8"><br><br>
                     <input type="submit">
                 </form>
             </samp>
