--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/range.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/range.html
@@ -5,43 +5,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Required</title>
+    <title>Range</title>
 </head>
 
 <body>
-    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>required</strong> Attribute</h1>
-
+    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>range</strong> Attribute</h1>
     <section>
-        <h2>required</h2>
-        <p>The <code style="color:red">required</code> <code style="color:red"></code> attribute
-            is a boolean attribute.When present, it specifies that an input field must be filled out before submitting
-            the form.
+        <h2>range</h2>
+        <p>The <code style="color:red">&lt;input type="range"&gt;</code> defines a a control for entering a number whose
+            exact value is not important (like a slider control).
+
+            Default range is 0 to 100. However, you can set restrictions on what numbers are accepted with the
+            attributes below.
+
+            max - specifies the maximum value allowed
+            min - specifies the minimum value allowed
+            step - specifies the legal number intervals
+            value - Specifies the default value
+
             <br><br>
-            <strong>Note</strong>: The required attribute works with the following input types: <u>text, search, url,
-                tel,
-                email, password,
-                date pickers, number, checkbox, radio,</u> and <u>file.</u>
-            <br><br>
+            <b>Tip</b>: Always add the &lt;label&gt; tag for best accessibility practices!
         </p>
         <div style="background:#e4eff1">
-            <p>Example:
+            <p><b>Example</b>:
                 <br><br>
-                An HTML form with a required input field:
+Define a range control (like a slider control):
             </p>
             <hr>
             <code>
                 <pre>
                     &lt;form action="/action_page.php"&gt;
-                    &lt;label for="username"&gt;Username:&lt;/label&gt;
-                    &lt;input type="text" id="username" name="username" required&gt;
+                    &lt;label for="vol"&gt;Volume (between 0 and 50):&lt;/label&gt;
+                    &lt;input type="range" id="vol" name="vol" min="0" max="50"&gt;
                     &lt;input type="submit"&gt;
                     &lt;/form&gt;
                 </pre>
             </code>
             <samp>
+                <h1>Display a Range Field</h1>
+
                 <form action="/action_page.php">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
+                    <label for="vol">Volume (between 0 and 50):</label>
+                    <input type="range" id="vol" name="vol" min="0" max="50">
                     <input type="submit">
                 </form>
             </samp>
