--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/reset.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/reset.html
@@ -5,44 +5,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Required</title>
+    <title>reset</title>
 </head>
 
 <body>
-    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>required</strong> Attribute</h1>
+    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>reset</strong> Attribute</h1>
 
     <section>
-        <h2>required</h2>
-        <p>The <code style="color:red">required</code> <code style="color:red"></code> attribute
-            is a boolean attribute.When present, it specifies that an input field must be filled out before submitting
-            the form.
-            <br><br>
-            <strong>Note</strong>: The required attribute works with the following input types: <u>text, search, url,
-                tel,
-                email, password,
-                date pickers, number, checkbox, radio,</u> and <u>file.</u>
+        <h2>reset</h2>
+        <p>The <code style="color:red">reset</code> defines a reset button which resets all form
+            values to its initial values.
+<br><br>
+            <b>Tip</b>: Avoid reset buttons in your forms! It is frustrating for users if they click them by mistake.
             <br><br>
         </p>
         <div style="background:#e4eff1">
-            <p>Example:
+            <p><b>Example</b>:
                 <br><br>
-                An HTML form with a required input field:
+                An HTML form with a reset input field:
             </p>
             <hr>
             <code>
                 <pre>
                     &lt;form action="/action_page.php"&gt;
-                    &lt;label for="username"&gt;Username:&lt;/label&gt;
-                    &lt;input type="text" id="username" name="username" required&gt;
-                    &lt;input type="submit"&gt;
+                    &lt;label for="email"&gt;Enter your email:&lt;/label&gt;
+                    &lt;input type="email" id="email" name="email"&gt;&lt;br&gt;&lt;br&gt;
+
+                    &lt;label for="pin"&gt;Enter a PIN:&lt;/label&gt;
+                    &lt;input type="text" id="pin" name="pin" maxlength="4"&gt;&lt;br&gt;&lt;br&gt;
+
+                    &lt;input type="reset" value="Reset"&gt;
+                    &lt;input type="submit" value="Submit"&gt;
                     &lt;/form&gt;
                 </pre>
             </code>
             <samp>
+                <h1>Display a Reset Button</h1>
+
+                <p>Click on the reset button to reset the form.</p>
+
                 <form action="/action_page.php">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
-                    <input type="submit">
+                    <label for="email">Enter your email:</label>
+                    <input type="email" id="email" name="email"><br><br>
+
+                    <label for="pin">Enter a PIN:</label>
+                    <input type="text" id="pin" name="pin" maxlength="4"><br><br>
+
+                    <input type="reset" value="Reset">
+                    <input type="submit" value="Submit">
                 </form>
             </samp>
             <br>
