--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/search.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/search.html
@@ -5,43 +5,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Required</title>
+    <title>Search</title>
 </head>
 
 <body>
-    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>required</strong> Attribute</h1>
+    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>search</strong> Attribute</h1>
 
     <section>
-        <h2>required</h2>
-        <p>The <code style="color:red">required</code> <code style="color:red"></code> attribute
-            is a boolean attribute.When present, it specifies that an input field must be filled out before submitting
-            the form.
-            <br><br>
-            <strong>Note</strong>: The required attribute works with the following input types: <u>text, search, url,
-                tel,
-                email, password,
-                date pickers, number, checkbox, radio,</u> and <u>file.</u>
-            <br><br>
+        <h2>search</h2>
+        <p>The <code style="color:red">search</code> defines a text field for entering a
+            search string.
+<br><br>
+            <b>Note</b>: Remember to set a name for the search field, otherwise nothing will be submitted. The most
+            common name
+            for search inputs is q.
         </p>
         <div style="background:#e4eff1">
-            <p>Example:
+            <p><b>Example</b>:
                 <br><br>
-                An HTML form with a required input field:
+                An HTML form with a search input field:
             </p>
             <hr>
             <code>
                 <pre>
                     &lt;form action="/action_page.php"&gt;
-                    &lt;label for="username"&gt;Username:&lt;/label&gt;
-                    &lt;input type="text" id="username" name="username" required&gt;
+                    &lt;label for="gsearch"&gt;Search Google:&lt;/label&gt;
+                    &lt;input type="search" id="gsearch" name="gsearch"&gt;
                     &lt;input type="submit"&gt;
                     &lt;/form&gt;
                 </pre>
             </code>
             <samp>
+                <h1>Display a Search Field</h1>
+
                 <form action="/action_page.php">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
+                    <label for="gsearch">Search Google:</label>
+                    <input type="search" id="gsearch" name="gsearch">
                     <input type="submit">
                 </form>
             </samp>
