--- a/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/text.html
+++ b/html-cheat-sheet/Pages/Forms/Form Pages/Input Types/text.html
@@ -5,45 +5,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Required</title>
+    <title>Text</title>
 </head>
 
 <body>
-    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>required</strong> Attribute</h1>
-
+    <h1 style="text-align: center;">HTML &lt;input&gt; <strong>text</strong> Attribute</h1>
     <section>
-        <h2>required</h2>
-        <p>The <code style="color:red">required</code> <code style="color:red"></code> attribute
-            is a boolean attribute.When present, it specifies that an input field must be filled out before submitting
-            the form.
-            <br><br>
-            <strong>Note</strong>: The required attribute works with the following input types: <u>text, search, url,
-                tel,
-                email, password,
-                date pickers, number, checkbox, radio,</u> and <u>file.</u>
-            <br><br>
+        <h2>text</h2>
+        <p>The <code style="color:red">text</code> defines a single-line text field. The default width of the text field is 20 characters.
+<br><br>
+        <b>Tip</b>: Always add the &lt;label&gt; tag for best accessibility practices!
         </p>
         <div style="background:#e4eff1">
-            <p>Example:
+            <p><b>Example</b>:
                 <br><br>
-                An HTML form with a required input field:
+Define a single-line text field that a user can enter text into:
             </p>
             <hr>
             <code>
                 <pre>
                     &lt;form action="/action_page.php"&gt;
-                    &lt;label for="username"&gt;Username:&lt;/label&gt;
-                    &lt;input type="text" id="username" name="username" required&gt;
-                    &lt;input type="submit"&gt;
+                    &lt;label for="fname"&gt;First name: &lt;/label&gt;
+                    &lt;input type="text" id="fname" name="fname"&gt;&lt;br&gt;&lt;br&gt;
+                    &lt;label for="lname"&gt;Last name: &lt;/label&gt;
+                    &lt;input type="text" id="lname" name="lname"&gt;&lt;br&gt;&lt;br&gt;
+                    &lt;input type="submit" value="Submit"&gt;
                     &lt;/form&gt;
                 </pre>
             </code>
             <samp>
+                <h1>Display Text Input Fields</h1>
+
                 <form action="/action_page.php">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
-                    <input type="submit">
+                    <label for="fname">First name: </label>
+                    <input type="text" id="fname" name="fname"><br><br>
+                    <label for="lname">Last name: </label>
+                    <input type="text" id="lname" name="lname"><br><br>
+                    <input type="submit" value="Submit">
                 </form>
+
+                <p>Click on the submit button to submit the form.</p>
             </samp>
             <br>
         </div>
